--- a/🐍Python/Jupyter_Notebook/app.ipynb
+++ b/🐍Python/Jupyter_Notebook/app.ipynb
@@ -2,33 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'firstprojectwithconda (Python 3.12.7)' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'conda install -n firstprojectwithconda ipykernel --update-deps --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world With Python\n"
      ]
     }
    ],
    "source": [
-    "print(\"hello world\")"
+    "print(\"hello world With Python\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hello Markdown File\n",
+    "All Good"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "firstprojectwithconda",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
